tests/requests/snapshots/admin/can_create_user_with_role_manager@admin.snap
---
source: tests/requests/admin.rs
assertion_line: 36
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"message\":\"Successfully created new user Boss Baby with role manager\"}",
)
