tests/requests/snapshots/admin/can_handle_invalid_roles@admin.snap
---
source: tests/requests/admin.rs
assertion_line: 67
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"message\":\"{\\\"role\\\":\\\"Only admin, manager and staff roles allowed\\\"}\"}",
)
